--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
        </section>
 
        <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto tempora iusto incidunt vitae aut necessitatibus sed explicabo error iure recusandae neque non similique cupiditate blanditiis sunt, omnis sint suscipit!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti debitis eius autem nihil aliquid, nulla ad nobis alias tempore! Laboriosam pariatur numquam ullam maiores nobis excepturi deserunt architecto similique harum.</p>
+       </section>
+       
+       <section>
             <h2>Contact</h4>
 
        </section>
 
         <sections>
-            <h2>FUN FACTS</h4>
-            <p>Natalie smells</p>
-            <p>Natalie will get swept in pickleball TONIGHT</p>
-            <p>She kinda cute ngl</p>
+            <h2></h4>
+            <p></p>
+            <p></p>
+            <p></p>
         </sections>
     </main>
     <footer>
